# Team1gc

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  index.html  main.py  pyproject.toml  script.js  styles.css
backend/: .env.template  API_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  docker-compose.yml  dockerfile  pyproject.toml
backend/src/: main.py
backend/src/core/: api.py  logger.py
backend/src/domains/auth/: router.py  service.py
backend/src/domains/buyers/: router.py  service.py
backend/src/domains/health/: router.py
backend/src/domains/orders/: service.py
backend/src/domains/products/: router.py  service.py
backend/src/domains/sellers/: router.py  service.py
backend/src/domains/suppliers/: router.py  service.py
backend/src/domains/uploads/: router.py
backend/src/domains/webhooks/: router.py  service.py
backend/src/infrastructure/bucket/: __init__.py  base.py  manager.py  r2.py  utils.py
backend/src/infrastructure/database/: __init__.py  connection.py  init_db.py  manage_db.py
backend/src/infrastructure/payments/: __init__.py  dodo.py
backend/src/shared/: exceptions.py
backend/src/shared/config/: cfg.py
backend/src/shared/database/: connection.py
backend/src/shared/dependencies/: auth.py  services.py
backend/src/shared/models/: base.py  order.py  payments.py  product.py  user.py
backend/src/shared/schemas/: order.py  payment.py  product.py  user.py
backend/src/shared/utils/: __init__.py  bucket.py
backend/tests/: conftest.py  test_auth_service.py
frontend/: PAGES_README.md  package-lock.json  (+1 more)
(+73 files in other folders)
