[project]
name = "team1gc"
version = "0.1.0"
description = "Gem store"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
